implement retrofit fo remote data source

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,9 @@ dependencies {
 
     // chip navbar
     implementation "com.ismaeldivita.chipnavigation:chip-navigation-bar:$chip_navbar_version"
+
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
 }
