--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
 
     ext.room_version = "2.2.5"
     ext.chip_navbar_version = "1.3.4"
+    ext.retrofit_version = "2.9.0"
+    ext.logging_interceptor_version = "4.8.0"
 
     repositories {
         google()
