--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
     ext.logging_interceptor_version = "4.8.0"
     ext.kotlin_coroutines_version = "1.3.7"
     ext.lifecycle_version = "2.2.0"
+    ext.koin_version = "2.1.6"
 
     repositories {
         google()
