--- a/favorite/src/main/AndroidManifest.xml
+++ b/favorite/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <dist:module
         dist:instant="false"
-        dist:title="@string/title_favorite">
+        dist:title="@string/favorites">
         <dist:delivery>
             <dist:install-time />
         </dist:delivery>
