--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
     ext.koin_version = "2.1.6"
     ext.leak_canary_version = "2.4"
     ext.lottie_version = "3.4.1"
+    ext.shimmer_version = "0.5.0"
 
     repositories {
         google()
