Change consumer-rules.pro config & change sqlite dependencies to androidx

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -58,5 +58,5 @@ dependencies {
 
     // encryption
     implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation "androidx.sqlite:sqlite:2.1.0"
+    implementation "androidx.sqlite:sqlite-ktx:2.1.0"
 }
